[package]
name = "poppy"
version = "0.1.0"
authors = ["Carl Malmz <callem217@gmail.com>"]
description = "[WIP] An opus implementation in pure rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Malmz/poppy"

[dependencies]
hound = "3.4.0"
num-traits = "0.2.5"

[dependencies.opus]
path = "../opus"
