[package]
name = "poppy"
version = "0.0.1"
authors = ["Carl Malmz <callem217@gmail.com>"]
description = "[WIP] An opus implementation in pure rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Malmz/poppy"

[dev-dependencies]
hound = "3.4.0"

[dev-dependencies.opus-sys]
path = "../opus-sys"
version = "0.1.0"
